# resume_parser

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  script.py  test.py
output/: test.md
